# CameraCalibration

./: CMakeLists.txt  README  opencv_calib.cpp
config_files/: opencv_calib.xml  stereo_images.xml
config_sample/: .stereo_images.xml.swp
src/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  opencv_calib.cpp  stereo_calib.cpp  stereo_calib.h
src/CMakeModules/: FindFREEGLUT.cmake  FindGLEW.cmake  FindPangolin.cmake
