PROJECT("CameraCalibration")
SET(CAMERACALIBRATION_VERSION_MAJOR 0)
SET(CAMERACALIBRATION_VERSION_MINOR 1)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF (CMAKE_COMPILER_IS_GNUCXX )
  ADD_DEFINITIONS("-Wall -Wno-error=deprecated-declarations -Werror")
ENDIF()

# Overide with cmake -DCMAKE_BUILD_TYPE=Debug {dir}
IF( NOT CMAKE_BUILD_TYPE )
   MESSAGE("Build type not set (defaults to release)")
   MESSAGE("-DCMAKE_BUILD_TYPE=Debug for debug")
   SET( CMAKE_BUILD_TYPE Release )
ENDIF()

FIND_PACKAGE(OpenCV REQUIRED)
IF(OpenCV_FOUND)
    SET(HAVE_OPENCV 1)
    INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
    MESSAGE("OpenCV Found and Enabled")
ENDIF(OpenCV_FOUND)

ADD_EXECUTABLE(opencv_calib opencv_calib.cpp)
TARGET_LINK_LIBRARIES(opencv_calib ${OpenCV_LIBS})
